암호화 적용

--- a/src/main/resources/egovframework/egovProps/globals.properties
+++ b/src/main/resources/egovframework/egovProps/globals.properties
@@ -43,31 +43,12 @@ Globals.oracle.Url=jdbc:oracle:thin:@127.0.0.1:1521:egovfrm
 Globals.oracle.UserName=
 Globals.oracle.Password=
 
-
-#altibase
-Globals.altibase.DriverClassName=Altibase.jdbc.driver.AltibaseDriver
-Globals.altibase.Url=jdbc:Altibase://127.0.0.1:1721/egovfrm?encoding=UTF-8
-Globals.altibase.UserName=
-Globals.altibase.Password=
-
-#tibero
-Globals.tibero.DriverClassName=com.tmax.tibero.jdbc.TbDriver
-Globals.tibero.Url=jdbc:tibero:thin:@127.0.0.1:1821:egovfrm
-Globals.tibero.UserName=
-Globals.tibero.Password=
-
-#cubrid
-Globals.cubrid.DriverClassName=cubrid.jdbc.driver.CUBRIDDriver
-Globals.cubrid.Url=jdbc:cubrid:127.0.0.1:33000:sht:::?charset=utf-8
-Globals.cubrid.UserName=
-Globals.cubrid.Password=
+#postgresql
+Globals.postgresql.DriverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+Globals.postgresql.Url=jdbc:log4jdbc:postgresql://:5432/reodev?charSet=UTF-8
+Globals.postgresql.UserName=reolino
+Globals.postgresql.Password=1qaz2wsx!@
 
 # MainPage Setting
 Globals.MainPage = /cmm/main/mainPage.do
 
-
-#postgresql
-Globals.postgresql.DriverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-Globals.postgresql.Url=jdbc:log4jdbc:postgresql://localhost:5432/reodev?charSet=UTF-8
-Globals.postgresql.UserName=reolino
-Globals.postgresql.Password=1qaz2wsx!@
