--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,12 @@
 			<artifactId>jasypt-spring-boot-starter</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+
+		<!-- session -->
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-core</artifactId>
+		</dependency>
 		
 
 		<!-- oracle 10g driver -->
