--- a/src/main/resources/egovframework/egovProps/globals.properties
+++ b/src/main/resources/egovframework/egovProps/globals.properties
@@ -45,9 +45,12 @@ Globals.oracle.Password=
 
 #postgresql
 Globals.postgresql.DriverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-Globals.postgresql.Url=jdbc:log4jdbc:postgresql://:5432/reodev?charSet=UTF-8
-Globals.postgresql.UserName=reolino
-Globals.postgresql.Password=1qaz2wsx!@
+#Globals.postgresql.Url=jdbc:log4jdbc:postgresql://:5432/reodev?charSet=UTF-8
+#Globals.postgresql.UserName=reolino
+#Globals.postgresql.Password=1qaz2wsx!@
+Globals.postgresql.Url=jdbc:log4jdbc:postgresql://115.178.73.117:25645/s_verse?charSet=UTF-8
+Globals.postgresql.UserName=s_verse
+Globals.postgresql.Password=s_verse
 
 # MainPage Setting
 Globals.MainPage = /cmm/main/mainPage.do
