--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -38,6 +38,7 @@
     "webpack-dev-server": "^4.0.0-rc.1"
   },
   "dependencies": {
+    "@toast-ui/editor": "^3.1.7",
     "highcharts": "^10.1.0",
     "sweetalert2": "^11.4.8",
     "tui-grid": "^4.21.1",
